# JobManager

./: Cargo.toml  Makefile  README.md  docker-compose.yaml  variables.compose.env
clients/: Cargo.toml
clients/src/: lib.rs
clients/src/database/: client.rs
clients/src/entities/: mod.rs  publish_response.rs  task_info.rs
clients/src/queue/: client.rs
entrypoint/: Cargo.toml
entrypoint/src/: arguments.rs  main.rs
entrypoint/src/server/: internal_error.rs  mod.rs  routes.rs
entrypoint/src/server/entities/: get_task_parameters.rs  get_task_response.rs  mod.rs  send_task_parameters.rs  send_task_payload.rs
entrypoint/src/task_manager/: client.rs  mod.rs
entrypoint/src/task_manager/entities/: get_task_response.rs  mod.rs  submit_request.rs  submit_response.rs
