[package]
name = "clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
anyhow = "1.0.68"


log = "0.4.17"
env_logger = "0.10"

serde_json = "1.0"
serde = { version = "1.0.152", features = ["derive"] }

tokio = { version = "1.25.0", default-features = false, features = ["rt", "macros"] }

amiquip = { version = "0.4", default-features = false }
redis = { version = "0.22.3", features = ["tokio-comp", "ahash", "cluster", "connection-manager"] }

uuid = { version = "1.3.0", features = ["v4"] }

chrono = { version = "0.4.23", features = ["serde"] }