[package]
name = "entrypoint"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde_json = "1.0"
amqprs = "1.0.5"

log = "0.4.17"
env_logger = "0.10"

clap = { version = "4.1.4", features = ["derive", "env"] }
tokio = { version = "1.25.0", default-features = false, features = ["rt", "macros"] }
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }

clients = { path = "../clients" }